# PP4G_compute

./: .gitignore  CMakeLists.txt  Vulkan_Compute.sln - Shortcut.lnk  compile_shaders_glsl.bat  generate_VS.bat  maths.h  utility.cpp  utility.h  vulkan_context.cpp  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_resources.cpp  vulkan_resources.h
buffer/: main.cpp
cmake_scripts/: Dependencies.cmake  Utilities.cmake
projects/: CMakeLists.txt
projects/vulkan_compute/: Timer.cpp  Timer.h  maths.cpp  vulkan_context.cpp  vulkan_context.h  vulkan_pipeline.cpp  vulkan_resources.cpp
projects/vulkan_compute/buffer/: main.cpp
projects/vulkan_compute/particle/: main.cpp
projects/vulkan_compute/particle_simd/: main.cpp
projects/vulkan_compute/texture/: main.cpp
scripts/: find_cmake.bat  find_vulkan.bat  generate_VS.bat
